--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "learn-ide-notifications",
   "main": "./lib/main",
-  "version": "0.66.1",
+  "version": "0.66.3",
+  "upstreamVersion": "0.66.1",
   "description": "A tidy fork of atom/notifications used by the Learn IDE",
   "repository": "https://github.com/learn-co/learn-ide-notifications",
   "license": "MIT",
